Changes in Version 0.7-4
  
  o  
    
  o  Fixed bug with finding unique values in Edit Function GUI.
    
  o  Measurement units have been removed. Users need to remove unit headers 
     from their input text files.
  
  o  Added GUI for sorting the processed data set.
  
Changes in Version 0.7-3
  
  o  Removed dependency on the 'tripack' package because of its restricted 
     license which explicitly forbids commercial use.
  