@@ -1,8 +1,12 @@
 Changes in Version 0.7-4
   
   o  
-    
+  
   o  Fixed bug with finding unique values in Edit Function GUI.
+  
+  o  The header line specifying variable names now comes before the format 
+     header line. Users need to update header lines in their input text files 
+     to reflect this change.
     
   o  Measurement units have been removed. Users need to remove unit headers 
      from their input text files.
